deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-meurig
  namespace: apps
spec:
  selector:
    matchLabels:
      app: service-meurig
  template:
    metadata:
      labels:
        app: service-meurig
    spec:
      containers:
      - name: service-meurig
        image: ko://github.com/izaakdale/service-meurig
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-meurig
  namespace: apps
spec:
  selector:
    app: service-meurig
  ports:
  - port: 80
    targetPort: 80
